Added luisa, added grade vs salary

--- a/academics/index.html
+++ b/academics/index.html
@@ -5,7 +5,10 @@
     Study terms gradually become more difficult, but class averages remain
     consistent.
   </span>
-  TODO
+  3B was voted as the most difficult term by students. Despite being the most
+  difficult, its class average was only slightly lower compared to other terms.
+  This suggests that students progressively become better at coping with
+  difficult courses.
 </p>
 <div class="half second">
   <div id="grades"></div>
@@ -27,7 +30,7 @@ compensate for their lower grades in 3B.
 </p>
 <div class="half second">
   <div id="attendance"></div>
-  <span class="graph-title">Attendance per term. Max score is 4. </span>
+  <span class="graph-title">Estimate percentage of class attended</span>
 </div>
 
 <div class="vbx4"></div>
