--- a/coop/index.html
+++ b/coop/index.html
@@ -75,8 +75,7 @@ TODO: Create asset
 <h3> Salary </h3>
 <p class="half">
   <span class="big">
-    By the last co-op term, students tripled the salary of their first
-    internship.
+    By the last co-op term, salaries tripled in comparison to the first.
   </span>
   This is largely explained by the salary differences between different locations,
   extra stipends included in offers. These factors compensate for higher living
@@ -104,13 +103,34 @@ imply higher job satisfaction.
 <h3> Grades </h3>
 <p class="half">
   <span class="big">
-    Students who started coding earlier were paid similarly compared to students who
-    started coding later.
+    Grades do not correlate with salary at all.
   </span>
+  In other words, having a cumulative average does not imply that the student
+  will get a good salary in the upcoming co-op term. This suggests that there
+  are more important factors than grades when it comes to finding a good job.
+  <br /><br />
+  Some companies do use grades as a cutoff to filter large amounts of candidates.
+  However, many companies are aware that grades are not a good indication of how
+  performant a student can be during co-op.
+  <br /><br />
+  This suggests that if a student wanted to optimize for getting the best co-op
+  possible, aiming for a higher grade may not yield the desired results, and
+  their efforts can be redirected towards other involvements such as side
+  projects.
 </p>
 <div class="half second">
   <div id="grade-salary"></div>
-  <span class="graph-title"> Grades compared to salary </span>
+  <span class="graph-title"> Grades vs Salary </span>
+
+  <div class="scale">
+    <span class="legend">Co-op number:</span>
+    <div class="scale-item c1">1</div>
+    <div class="scale-item c2">2</div>
+    <div class="scale-item c3">3</div>
+    <div class="scale-item c4">4</div>
+    <div class="scale-item c5">5</div>
+    <div class="scale-item c6">6</div>
+  </div>
 </div>
 
 <div class="vbx4"></div>
