--- a/end/index.html
+++ b/end/index.html
@@ -58,6 +58,8 @@ Academic Calendar
   https://ugradcalendar.uwaterloo.ca/page/ENG-Software-Engineering</a>
 </p>
 
+<div class="vbx2"></div>
+
 <h3> Inspirations </h3>
 <p class="full">
 SYDE 2017 Class Profile
