--- a/future/index.html
+++ b/future/index.html
@@ -28,15 +28,17 @@
 <div class="vbx2"></div>
 
 <h3> Motivations </h3>
-TODO
 
-<h2> Debt </h2>
+<h3> Debt </h3>
 <p class="half">
   <span class="big">
-    65% of the class is graduating debt-free.
+    65% of students are graduating debt-free.
   </span>
-  Only 5% of students are graduating with more than $30,000 of debt.
-  TODO: Get family income?
+  30% of students have less than $30,000 in debt. Amongst students who are
+  in debt, the median debt is $22,500.
+  <br /><br />
+  In each income bracket, there are at least two students who graduated debt-free.
+  All students with family income higher than $200,000 graduated debt-free.
 </p>
 <div class="half second">
   <div id="debt"></div>
