--- a/background/index.html
+++ b/background/index.html
@@ -5,10 +5,14 @@
     Women make up 17% of students, which is approximately the same proportion as
     the number of women in tech.
   </span>
-  Although the gender ratio isn’t something to be
-  satisfied with, the trend is positive: the proportion of female students in
-  more-recent SE classes has been increasing.
+  Although we are still working towards increasing the number of minority gender
+  groups, we can see a positive increase in the recent SE classes.
   <br /> <br />
+  There are also many on-campus communities that supports the success of women in
+  computer science at UWaterloo. For example,
+  <a href="http://wics.uwaterloo.ca/about/">Women in Computer Science</a>, and
+  <a href="https://www.meetup.com/en-AU/Women-Who-Code-Waterloo/"> Women Who Code Waterloo </a>.
+  One student preferred not to disclose.
 </p>
 <div class="half second">
   <div id="gender"></div>
@@ -23,8 +27,7 @@
   SE students come from many different ethnic backgrounds, from at least 27
   different countries.
   </span>
-  About half of the student have ethnic origins in East
-  Asia, while the remaining half consist mostly of Caucasians and South Asians.
+  73% of the class had ethnic origins from East, South East or South Asia.
 </p>
 <div class="half second">
   <div id="ethnicity"></div>
@@ -82,7 +85,8 @@
     More than half of students come from families whose income is higher than
     the median Canadian family income ($76,000).
   </span>
-  The majority of students come from
+  These numbers do not include income from co-op terms. The majority of students
+  have a family income between $50,000 and $150,000.
 </p>
 <div class="half second">
   <div id="family-income"></div>
