--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -63,6 +63,23 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
     </div>
   </div>
+  <div class="path-item">
+    <span class="big path-title">Founding a club for social good</span>
+    <p>
+      On one of my coops I met a member of a Berkeley student club called Blueprint, where students build tech for nonprofits. I knew this was something I wanted to bring to Waterloo since it combined my skills in tech with my passion for volunteering. Another girl, Katrina and I started the Waterloo chapter of the student club.
+      <br /><br />
+      We've gotten to work with some amazing non-profits, whose missions range from cataloging the world's dying languages to the preservation of bumblebees to investing in entrepreneurs in rural Kenya. It's been a lot of hard work, and at times it left me feeling burnt out, but it's been an incredible experience 🙂
+    </p>
+    <div class="path-metadata">
+      <div class="path-photo">
+        <img src="./img/luisa.jpg" />
+      </div>
+      <div class="path-text">
+        <div class="path-name">Luisa San Martin</div>
+        <div class="path-description">Incoming Software Engineer at Uber</div>
+      </div>
+    </div>
+  </div>
 </div>
 <div class="half second">
   <div class="path-item">
