Added more photos, address more feedback

--- a/background/index.html
+++ b/background/index.html
@@ -6,12 +6,13 @@
     the number of women in tech.
   </span>
   Although we are still working towards increasing the number of minority gender
-  groups, we can see a positive increase in the recent SE classes.
+  groups, we can see a positive increase within the recent SE classes
   <br /> <br />
   There are also many on-campus communities that supports the success of women in
   computer science at UWaterloo. For example,
   <a href="http://wics.uwaterloo.ca/about/">Women in Computer Science</a>, and
   <a href="https://www.meetup.com/en-AU/Women-Who-Code-Waterloo/"> Women Who Code Waterloo </a>.
+  <br /><br />
   One student preferred not to disclose.
 </p>
 <div class="half second">
@@ -24,8 +25,7 @@
 <h3> Ethnicity</h3>
 <p class="half">
   <span class="big">
-  SE students come from many different ethnic backgrounds, from at least 27
-  different countries.
+  SE students come from many different ethnic backgrounds, which spans over 27 different countries.
   </span>
   73% of the class had ethnic origins from East, South East or South Asia.
 </p>
@@ -47,7 +47,7 @@
   school newspaper, and more. Pursuing their own unique personal interests was a
   common pattern amongst students during high school.
   <br /> <br />
-  Note that this is not a comprehensive list, and that students may have
+  Note that this is not a comprehensive list, and that students have
   participated in other extracurricular activities as well.
 </p>
 <div class="half second">
@@ -60,8 +60,8 @@
 <h3> International students </h3>
 <p class="half">
   <span class="big">
-  14% of SE students are international, which is 4% fewer than University of
-  Waterloo's 18%.
+  14% of students are international, which is 4% fewer than University of
+  Waterloo as a whole.
   </span>
   This could be due to the higher tuition costs for international students, who
   pay 27% more than the average internationa tuition fee. This could also be
