--- a/coop/index.html
+++ b/coop/index.html
@@ -5,13 +5,12 @@
     At least 300 companies from 58 different cities have hired an SE student.
   </span>
   Students had the opportunity to work in many different types of environments,
-  including working at a 5 person startup, developing in Kenya, doing
-  research with professors, and working at a big tech company. Some students tried
-  new positions outside of software engineering such
-  as product designer, data scientist, associate quantitative trader,
-  consultant, and more.
+  including working at a 5 person startup, developing in Kenya,
+  researching with professors, and working at a big tech company.
+  While a majority of students were software engineers during their co-ops,
+  some explored other areas such as design, product management, finance and consulting.
   <br /> <br />
-  The benefit of having 6 internships is that students get to explore different
+  The benefit of having 6 co-op terms is that students get to explore different
   company sizes doing different positions in different cities. This is
   invaluable for students because it helps students figure out what they want
   upon graduation.
@@ -20,7 +19,7 @@
 <p class="full">
 In the visualization below, <b>larger company names</b> means that <b>more people worked
   there</b>, and <b>brighter words</b> means that <b>people enjoyed their
-  internship there</b>.
+  co-op terms there</b>.
 TODO: Create asset
 </p>
 <div class="full">
@@ -33,13 +32,13 @@ TODO: Create asset
 <h3> Locations </h3>
 <p class="half">
   <span class="big">
-    91% of students interned in at least 2 different countries.
+    91% of students co-oped in at least 2 different countries.
   </span>
-  One of the factors behind 9% of students only interning in Canada were
+  One of the factors behind only 9% of students interning in Canada were
   restrictions from work visas which primarily affects non-Canadians.
   <br /><br />
-  The majority that interned in the US worked in California and specifically in Silicon Valley.
-  One of the reasons for this is because Silicon Valley is the HQ for many
+  The majority that co-oped in the US worked in California and specifically in Silicon Valley.
+  One of the reasons for this is because Silicon Valley is the headquarters for many
   large tech companies that hire software engineers such as Google, Facebook,
   Apple, etc.
   <br /><br />
@@ -60,10 +59,10 @@ TODO: Create asset
   <span class="big">
     31% of students that worked in California preferred working elsewhere.
   </span>
-  Although it is still preferred by the majority of students, this suggests that
-  it is not for everyone. This suggests that the infamous 'Cali or Bust'
-  mentality can set up a significant number of current students for
-  disappointment compared to other opportunities.
+  While California is still preferred by most, this suggests that it is not
+  for everyone. The infamous ‘Cali or Bust’ mentality could have hindered
+  some students from exploring opportunities in other cities that may have
+  been better suited for them.
 </p>
 <div class="half second">
   <div id="favourite-location"> </div>
@@ -77,24 +76,24 @@ TODO: Create asset
   <span class="big">
     By the last co-op term, salaries tripled in comparison to the first.
   </span>
-  This is largely explained by the salary differences between different locations,
-  extra stipends included in offers. These factors compensate for higher living
-  costs, especially in San Francisco where housing easily costs between
-  $2,000 to $3,000 per month.
+  The difference could be explained by the increase in salaries and
+  stipends to compensate for the difference in living costs between different
+  locations. For example, San Francisco housing typically costs a student between
+  $2,000 to $3,000 per month. In comparison, Waterloo housing costs a student
+  approximately $700 per month.
 </p>
 <div class="half second">
-  <div id="salary">
-  </div>
+  <div id="salary"></div>
   <span class="graph-title"> Companies students have worked at </span>
 </div>
 
 <div class="vbx2"></div>
 
-<h2> Does X affect job opportunities? </h2>
+<h2> Does X affect job pay? </h2>
 <h3> Salary as a metric </h3>
 <p class="full">
 In order to rank jobs appropriately, salary is used as a proxy metric to
-measure job quality. Due to the subjectiveness of this metric, the following
+measure job opportunities. Due to the subjectiveness of this metric, the following
 results should be taken with a grain of salt because higher salary does not
 imply higher job satisfaction.
 </p>
@@ -175,7 +174,7 @@ imply higher job satisfaction.
 <h3> Side projects </h3>
 <p class="half">
   <span class="big">
-    Students that build side projects earn 13% more on average than those that
+    Students that build side projects earned 13% more on average than those that
     don't build side projects.
   </span>
   The more time that a student invests into side projects, the more they are likely
@@ -185,7 +184,7 @@ imply higher job satisfaction.
 
   <br /> <br />
   It is important to mention that <b>side projects and hackathons are not the only way to find
-  a job</b>. There have been many less conventional ways students have used to
+  a job</b>. There have been many less practiced methods students have used to
   find job opportunities such as referrals, networking, etc.
   <br /> <br />
   It is just as important to note that <b>students who are not involved in software-related
@@ -203,7 +202,7 @@ imply higher job satisfaction.
 <h3> Admission average </h3>
 <p class="half">
   <span class="big">
-    Admission averages have no significant impact on early job opportunities.
+    Admission averages have no significant impact on job pay.
   </span>
   A 90 in one school could be harder to achieve than a 99 in another school.
   In other words, admission averages are an inaccurate metric to determine
