--- a/end/index.html
+++ b/end/index.html
@@ -48,7 +48,7 @@ profile. Much of the process and structure of this was borrowed from their SYDE
 </a>
 </p>
 <p class="full">
-Coop at UWaterloo
+Co-op at UWaterloo
 <a target="_blank" href="https://uwaterloo.ca/co-operative-education/">
   https://uwaterloo.ca/co-operative-education/</a>
 </p>
