--- a/future/index.html
+++ b/future/index.html
@@ -12,9 +12,9 @@
 
   Even though 80% of the class has worked in California, less than half of
   students have chosen to live in California after graduating. Although California
-  is perceived by many as the place to be for software engineering, seeing the gap
+  is perceived by many as the place to be for software engineers, seeing the gap
   in the conversion rate suggests that there are many other great places for
-  software engineering such as East Coast Canada, East Coast US and Pacific North
+  software engineers such as East Coast Canada, East Coast US and Pacific North
   West US.
 </p>
 <div class="half second">
