--- a/introduction/index.html
+++ b/introduction/index.html
@@ -3,7 +3,7 @@
   The University of Waterloo’s Software Engineering (SE) is an interdisciplinary
   program supported by both the Faculty of Mathematics and the Faculty of
   Engineering. For 5 years, all 141 graduating students of the class of 2018 spent 8
-  semesters in school with similar schedules as well as 6 internships.
+  semesters in school with similar schedules as well as 6 co-ops.
   <br /><br />
   SE is commonly compared to Computer Science, and is often seen as its more-constrained,
   engineering-oriented counterpart. Prospective students may wonder whether SE
@@ -18,12 +18,12 @@
 
 <p class="full">
 The findings in this report were derived from the results of a class survey.
-In total, 113 out of 141 (80%) graduating students responded. SE Classes
+In total, 113 out of 141 (80%) graduating students responded. SE classes
 can vary significantly depending on the year, so generalize from this survey
 to other classes at your own risk.
   <br /><br />
 
-Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). 4 month coop terms
+Study terms are defined as 1A, 1B, 2A, up to 4B (8 terms). 4 month co-op terms
 occur after every study term starting after 1B and ending before 4B.
 <br /><br />
 
