--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -29,7 +29,7 @@
   separate question that may be better left unanswered.
 
   <br/> <br />
-  These results vary depending on whether students are on a study or coop
+  These results vary depending on whether students are on a study or co-op
   term, since many companies cater meals during weekdays.
 </p>
 <div class="half second">
