--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -34,16 +34,6 @@
 
 <div class="vbx2"></div>
 
-<h3> Financial breakdown </h3>
-<p class="half third">
-  TODO
-</p>
-<div class="half second two-third">
-  Second half. Complex line chart
-</div>
-
-<div class="vbx2"></div>
-
 <h3> Paths </h3>
 <div class="half path-section">
   <div class="path-item">
@@ -63,12 +53,13 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
     </div>
   </div>
+
   <div class="path-item">
-    <span class="big path-title">Founding a club for social good</span>
+    <span class="big path-title">Starting a tech club for non profits</span>
     <p>
-      On one of my coops I met a member of a Berkeley student club called Blueprint, where students build tech for nonprofits. I knew this was something I wanted to bring to Waterloo since it combined my skills in tech with my passion for volunteering. Another girl, Katrina and I started the Waterloo chapter of the student club.
+      On one of my co-ops I met a member of a Berkeley student club called Blueprint, where students build tech for nonprofits. I loved the idea of it since it combined my skills in tech with my passion for volunteering. With another girl, I started the Waterloo chapter of the club.
       <br /><br />
-      We've gotten to work with some amazing non-profits, whose missions range from cataloging the world's dying languages to the preservation of bumblebees to investing in entrepreneurs in rural Kenya. It's been a lot of hard work, and at times it left me feeling burnt out, but it's been an incredible experience 🙂
+      We've gotten to work with some amazing non-profits, whose missions range from cataloging the world's dying languages to the preservation of bumblebees to investing in entrepreneurs in rural Kenya. It's been a lot of hard work, and at times it left me feeling burnt out, but it's been an incredible experience.
     </p>
     <div class="path-metadata">
       <div class="path-photo">
@@ -76,11 +67,36 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
       <div class="path-text">
         <div class="path-name">Luisa San Martin</div>
-        <div class="path-description">Incoming Software Engineer at Uber</div>
+        <div class="path-description">Incoming Software Engineer at Uber ATG</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="path-item">
+    <span class="big path-title">Starting a tech club for non profits</span>
+    <p>
+      I saw data science as a way to grow my skill set in a way that differentiated me
+      from other software engineers. I believe having an internship in data science has
+      had a larger impact on my personal and career growth than completing another
+      software engineering internship.
+      <br /><br />
+      Throughout my data science internships I've
+      learned various analysis and communication skills that will benefit me no matter
+      what position I decide to pursue. I feel lucky to have had people believe in me
+      to jump into a completely different role with no previous experience.
+    </p>
+    <div class="path-metadata">
+      <div class="path-photo">
+        <img src="./img/chris.png" />
+      </div>
+      <div class="path-text">
+        <div class="path-name">Christopher Luc</div>
+        <div class="path-description">Incoming Software Engineer at WhatsApp</div>
       </div>
     </div>
   </div>
 </div>
+
 <div class="half second">
   <div class="path-item">
     <span class="big path-title">Minoring in Cognitive Science</span>
