Many small final fixes

--- a/academics/index.html
+++ b/academics/index.html
@@ -11,26 +11,27 @@
   difficult courses.
 </p>
 <div class="half second">
-  <div id="grades"></div>
   <span class="graph-title">Grades from 1A to 4A </span>
+  <div id="grades"></div>
 </div>
 
 <div class="vbx2"></div>
 <h3> Attendance </h3>
 <p class="half">
 <span class="big">
-  Attendance consistently drops term by term, except after the
-  hardest term.
+  Attendance consistently drops term by term, except after 3B
 </span>
-Either students enjoyed their 4A classes more, or they were possibly looking to
-compensate for their lower grades in 3B.
+  3B also happens to be the hardest term.
+  <br /><br />
+  This could be because students enjoyed their 4A classes more, or maybe they
+  were possibly looking to compensate for their lower grades in 3B.
 <br /><br />
   Alternatively, students attend slightly more class more during summer terms
   (2B and 4A).
 </p>
 <div class="half second">
+  <span class="graph-title">Attendance vs Grades</span>
   <div id="attendance"></div>
-  <span class="graph-title">Estimate percentage of class attended</span>
 </div>
 
 <div class="vbx4"></div>
@@ -51,8 +52,8 @@ compensate for their lower grades in 3B.
   Distributed Computing (ECE 454), and Human-Computer Interaction (CS 449).
 </p>
 <div class="half second">
-  <div id="favourite-course"></div>
   <span class="graph-title">Favourite mandatory courses</span>
+  <div id="favourite-course"></div>
 </div>
 
 <h3> Least favourite required courses </h3>
@@ -70,11 +71,10 @@ compensate for their lower grades in 3B.
   Computation (SE 212) is considered useful by 88% of students
   <a href="https://uwflow.com/course/se212" target="_blank">
     according to UWFlow.</a>
-
 </p>
 <div class="half">
-  <div id="disliked-course"></div>
   <span class="graph-title">Least favourite mandatory courses</span>
+  <div id="disliked-course"></div>
 </div>
 <div class="vbx2"></div>
 
@@ -90,6 +90,8 @@ beneficial. Instead, it suggests that it is possible to achieve good grades with
 attending all classes.
 </p>
 <div class="half second">
+  <span class="graph-title">Attendance compared to relative grade from the
+    average</span>
   <div id="distribution"></div>
 </div>
 <div class="vbx2"></div>
@@ -99,12 +101,15 @@ attending all classes.
   <span class="big">
     Grades are slightly higher when at least one parent had a university-level degree.
   </span>
-  This suggests that there's a correlation between parents' education and how
+  This suggests that there could be a correlation between parents' education and how
   academically inclined students are.
+  <br /><br />
+  However, this does not suggest that having a parent with a university-level degree is a
+  requirement for getting good grades.
 </p>
 <div class="half second">
+  <span class="graph-title">Parents' education compared to grades</span>
   <div id="parent-grades"></div>
-  <span class="graph-title">Parents' education</span>
 </div>
 
 <div class="vbx4"></div>
