--- a/background/index.html
+++ b/background/index.html
@@ -16,8 +16,8 @@
   One student preferred not to disclose.
 </p>
 <div class="half second">
-  <div id="gender"></div>
   <span class="graph-title">Gender proportion in class</span>
+  <div id="gender"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -25,13 +25,14 @@
 <h3> Ethnicity</h3>
 <p class="half">
   <span class="big">
-  SE students come from many different ethnic backgrounds, which spans over 27 different countries.
+  Students come from many different ethnic backgrounds, which spans over 27 different countries.
   </span>
-  73% of the class had ethnic origins from East, South East or South Asia.
+  There was a significant number of students Caucasians, South Asians, and East
+  Asians. There were no hispanic students in our class.
 </p>
 <div class="half second">
-  <div id="ethnicity"></div>
   <span class="graph-title">Students' ethnicities</span>
+  <div id="ethnicity"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -39,7 +40,7 @@
 <h3> High school extracurriculars</h3>
 <p class="half">
   <span class="big">
-  Less than 35% of students were involved in a STEM, CS or Robotics club during
+  Less than 35% of students were involved in a STEM, CS or Robotics clubs during
   high school.
   </span>
   Instead, students participated in all sorts of extracurricular
@@ -51,8 +52,8 @@
   participated in other extracurricular activities as well.
 </p>
 <div class="half second">
+  <span class="graph-title">Extracurriculars during high school</span>
   <div id="hs-extras"></div>
-  <span class="graph-title">Extracurriculars students were involved with in high school</span>
 </div>
 
 <div class="vbx2"></div>
@@ -64,7 +65,7 @@
   Waterloo as a whole.
   </span>
   This could be due to the higher tuition costs for international students, who
-  pay 27% more than the average internationa tuition fee. This could also be
+  pay 27% more than the average international tuition fee. This could also be
   caused by the Engineering Admissions having a max quota for international
   students.
   <br /> <br />
@@ -72,8 +73,8 @@
   China, Pakistan, South Korea, Indonesia.
 </p>
 <div class="half second">
-  <div id="international"></div>
   <span class="graph-title">Proportion of international students</span>
+  <div id="international"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -89,8 +90,8 @@
   have a family income between $50,000 and $150,000.
 </p>
 <div class="half second">
+  <span class="graph-title">Number of students per family income class</span>
   <div id="family-income"></div>
-  <span class="graph-title"></span>
 </div>
 
 <div class="vbx2"></div>
@@ -102,11 +103,11 @@
   </span>
   Compared to our parents, only 3 students out of 113 are planning on attending
   grad school. This could
-  either be a generational shift, or it could just be that students are tired of
+  be a generational shift, or maybe it could just be that students are tired of
   school after 5 years with no summer.
 </p>
 <div class="half second">
-  <div id="parent-education"></div>
   <span class="graph-title">Parents' highest education</span>
+  <div id="parent-education"></div>
 </div>
 
