--- a/coop/index.html
+++ b/coop/index.html
@@ -5,7 +5,7 @@
     At least 300 companies from 58 different cities have hired an SE student.
   </span>
   Students had the opportunity to work in many different types of environments,
-  including working at a 5 person startup, developing in Kenya,
+  including working at a 5 person startup, writing code in Kenya,
   researching with professors, and working at a big tech company.
   While a majority of students were software engineers during their co-ops,
   some explored other areas such as design, product management, finance and consulting.
@@ -16,16 +16,15 @@
   upon graduation.
 </p>
 <div class="vb"></div>
-<p class="full">
-In the visualization below, <b>larger company names</b> means that <b>more people worked
-  there</b>, and <b>brighter words</b> means that <b>people enjoyed their
-  co-op terms there</b>.
-TODO: Create asset
-</p>
 <div class="full">
+  <span class="graph-title"> Companies students have co-oped at </span>
+  <div class="coop-cloud-legend">
+    Legend:
+    <span class="cloud-small">Less enjoyed, less students worked at</span>
+    <span class="cloud-big">More enjoyed, more students worked at</span>
+  </div>
   <div id="coop-cloud">
   </div>
-  <span class="graph-title"> Companies students have worked at </span>
 </div>
 
 <div class="vbx2"></div>
@@ -47,9 +46,9 @@ TODO: Create asset
   Penh, Shanghai, Tokyo, etc.
 </p>
 <div class="half second">
+  <span class="graph-title"> Areas students have worked in </span>
   <div id="work-location">
   </div>
-  <span class="graph-title"> Areas students have worked in </span>
 </div>
 
 <div class="vbx2"></div>
@@ -65,8 +64,8 @@ TODO: Create asset
   been better suited for them.
 </p>
 <div class="half second">
+  <span class="graph-title"> Areas of favourite companies </span>
   <div id="favourite-location"> </div>
-  <span class="graph-title"> Companies students have worked at </span>
 </div>
 
 <div class="vbx2"></div>
@@ -76,15 +75,18 @@ TODO: Create asset
   <span class="big">
     By the last co-op term, salaries tripled in comparison to the first.
   </span>
+  Average monthly salaries per co-op term were <b>$2914, $4236, $5895, $7981, $9338,
+    $10015</b> (in CAD).
+  <br /><br />
   The difference could be explained by the increase in salaries and
   stipends to compensate for the difference in living costs between different
   locations. For example, San Francisco housing typically costs a student between
-  $2,000 to $3,000 per month. In comparison, Waterloo housing costs a student
+  $1,500 to $2,500 per month. In comparison, Waterloo housing costs a student
   approximately $700 per month.
 </p>
 <div class="half second">
+  <span class="graph-title"> Monthly salaries per co-op term in CAD</span>
   <div id="salary"></div>
-  <span class="graph-title"> Companies students have worked at </span>
 </div>
 
 <div class="vbx2"></div>
@@ -118,8 +120,8 @@ imply higher job satisfaction.
   projects.
 </p>
 <div class="half second">
+  <span class="graph-title"> Grades compared to monthly salary</span>
   <div id="grade-salary"></div>
-  <span class="graph-title"> Grades vs Salary </span>
 
   <div class="scale">
     <span class="legend">Co-op number:</span>
@@ -130,6 +132,9 @@ imply higher job satisfaction.
     <div class="scale-item c5">5</div>
     <div class="scale-item c6">6</div>
   </div>
+  <p class="full center">
+  <b> Interactive: </b> Click on a co-op number to view the plot for that co-op.
+  </p>
 </div>
 
 <div class="vbx4"></div>
@@ -139,13 +144,14 @@ imply higher job satisfaction.
     Students who started coding earlier were paid similarly compared to students who
     started coding later.
   </span>
-  It doesn't matter if a student started at the age of 13 or 18. This suggests
+  In other words, it doesn't matter if a student started at the age of 13 or 18. This suggests
   that students that started coding later are not at a disadvantage in terms
   of co-op job opportunities.
 </p>
 <div class="half second">
+  <span class="graph-title"> Coding start age compared to monthly salary
+  </span>
   <div id="age-salary"></div>
-  <span class="graph-title"> Age started programming </span>
 </div>
 
 <div class="vbx2"></div>
@@ -157,17 +163,17 @@ imply higher job satisfaction.
   </span>
   In other words, students who show passion for building projects get better job
   opportunities than those that don't. Alternatively, this result could be
-  because students that attended a hackathon cared more about getting a better
-  job.
+  because students that attended a hackathon cared more about getting a higher
+  paying job.
   <br /> <br />
   Students who attended more than 5 hackathons earned approximately 27% more than
   those that only attended between 1 to 5 hackathons. This could suggest that the
-  former has a lot more relevant work to show which is more appealing to
+  former had a lot more relevant work to show which is more appealing to
   employers.
 </p>
 <div class="half second">
+  <span class="graph-title"> Hackathon attendance's influence on monthly salary </span>
   <div id="hackathon-salary"></div>
-  <span class="graph-title"> Number of hackathons attended</span>
 </div>
 
 <div class="vbx2"></div>
@@ -192,10 +198,8 @@ imply higher job satisfaction.
   many SE students and faculty encourage pursuing interests besides software.
 </p>
 <div class="half second">
+  <span class="graph-title"> Side project commitment compared to monthly salary</span>
   <div id="side-salary"></div>
-  <span class="graph-title"> Side project commitment estimate</span>
-  <div id="side-salary-2"></div>
-  <span class="graph-title"> Side project commitment estimate</span>
 </div>
 
 <div class="vbx2"></div>
@@ -210,6 +214,6 @@ imply higher job satisfaction.
   with each other.
 </p>
 <div class="half second">
+  <span class="graph-title"> Admission average compared to monthly salary</span>
   <div id="admission-salary"></div>
-  <span class="graph-title"> Side project commitment estimate</span>
 </div>
