--- a/end/index.html
+++ b/end/index.html
@@ -29,14 +29,21 @@ helping write processing scripts.
 
 <p class="full">
 <b>Joey Loi</b> and <b>Atef Chaudhury</b> for inspiring me to create this class
-profile. Much of the process and structure of this was borrowed from their SYDE
-2017 class profile.
+profile. Much of the process and structure of this was borrowed from their
+Systems Design Engineering
+2017 Class Profile.
 </p>
 
 <div class="hvb"></div>
 <p class="full">
-<b>Balaji S., Emily W., Seun M., Soheil
-  K.</b>, and <b>Bilal A.</b> for providing feedback on the survey sent out.
+<b>Jenny Sun, Derrek Chow, Kaitlyn Yong, and Bo Peng</b> for providing feedback on the
+initial drafts of the class profile.
+</p>
+
+<div class="hvb"></div>
+<p class="full">
+<b>Balaji Sankaranarayanan, Emily Walls, Seun Makinde, Soheil
+  Koushan</b>, and <b>Bilal Akhtar</b> for providing feedback on the survey sent out.
 </p>
 
 <div class="vbx2"></div>
