--- a/future/index.html
+++ b/future/index.html
@@ -18,16 +18,14 @@
   West US.
 </p>
 <div class="half second">
-  <div id="post-grad"></div>
   <span class="graph-title">Post graduation plans</span>
+  <div id="post-grad"></div>
   <div class="vb"></div>
-  <div id="post-location"></div>
   <span class="graph-title">Desired location</span>
+  <div id="post-location"></div>
 </div>
 
 <div class="vbx2"></div>
-
-<h3> Motivations </h3>
 
 <h3> Debt </h3>
 <p class="half">
@@ -41,11 +39,6 @@
   All students with family income higher than $200,000 graduated debt-free.
 </p>
 <div class="half second">
+  <span class="graph-title">Debt per family income class</span>
   <div id="debt"></div>
-  Second half. Bar chart.
 </div>
-
-<h2> Advice </h2>
-<p class="full">
-TODO
-</p>
