--- a/introduction/index.html
+++ b/introduction/index.html
@@ -9,7 +9,7 @@
   engineering-oriented counterpart. Prospective students may wonder whether SE
   is the right fit for them, and whether they’ll enjoy the environment. This
   profile attempts to showcase who SE 2018 students are, what they've done, and
-  how university went.
+  how university went for students.
 </p>
 
 <div class="vbx4"></div>
@@ -31,6 +31,6 @@ All analysis involving income is expressed in Canadian dollars (CAD). The exchan
 rate used to convert from USD to CAD depends on time and is stated where relevant.
 
 <br /><br />
-This class profile was inspired from the SYDE 2017 class profile created
+This class profile was inspired from the Systems Design Engineering 2017 Class Profile created
 by Joey Loi and Atef Chaudhury.
 </p>
