--- a/lifestyle/index.html
+++ b/lifestyle/index.html
@@ -12,9 +12,8 @@
   aside time for physical activities.
 </p>
 <div class="half second">
-  <div id="exercise">
-  </div>
   <span class="graph-title"> Exercise frequency </span>
+  <div id="exercise"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -33,8 +32,8 @@
   term, since many companies cater meals during weekdays.
 </p>
 <div class="half second">
-  <div id="cooking"></div>
   <span class="graph-title"> Cooking frequency </span>
+  <div id="cooking"></div>
 </div>
 
 <div class="vbx2"></div>
@@ -53,8 +52,8 @@
   coding events called hackathons.
 </p>
 <div class="half second">
-  <div id="sleeping"></div>
   <span class="graph-title"> Estimate sleep time </span>
+  <div id="sleeping"></div>
 </div>
 
 
@@ -68,10 +67,12 @@
   Amongst those that were involved, almost
   every student were the only SE 2018 student in their respective extracurricular
   activity.
+  <br /><br />
+  Most students did not pursue any extracurricular activities related to STEM.
 </p>
 <div class="half second">
-  <div id="uni-extras"></div>
   <span class="graph-title">Non-comprehensive list of university extrcurriculars</span>
+  <div id="uni-extras"></div>
 </div>
 
 <div class="vbx4"></div>
@@ -100,8 +101,8 @@
     according to a StackOverflow survey</a>.
 </p>
 <div class="half second">
+  <span class="graph-title"> Favourite programming language</span>
   <div id="languages" ></div>
-  <span class="graph-title"> Programming language preference</span>
 </div>
 
 
@@ -120,8 +121,8 @@
 
 </p>
 <div class="half second">
+  <span class="graph-title"> Favourite editor </span>
   <div id="editor" ></div>
-  <span class="graph-title"> Editor preference</span>
 </div>
 
 <div class="vbx2"></div>
@@ -141,8 +142,8 @@
   users during university.
 </p>
 <div class="half second">
+  <span class="graph-title"> Favourite desktop OS </span>
   <div id="desktop"></div>
-  <span class="graph-title"> Primary desktop OS </span>
 </div>
 
 
@@ -163,9 +164,9 @@
 
 </p>
 <div class="half second">
+  <span class="graph-title"> Number of hackathons attended </span>
   <div id="hackathons">
   </div>
-  <span class="graph-title"> Number of hackathons attended </span>
 </div>
 
 
@@ -184,8 +185,8 @@
   a better co-op job because it compensates for the lack of software work experience.
 </p>
 <div class="half second">
+  <span class="graph-title"> Estimated commitment to side projects </span>
   <div id="side"></div>
-  <span class="graph-title"> Side project commitment estimate </span>
 </div>
 
 
@@ -214,7 +215,7 @@
 
 </p>
 <div class="half second">
-  <div id="disciplines"></div>
   <span class="graph-title"> Disciplines of interest </span>
+  <div id="disciplines"></div>
 </div>
 
