--- a/outcomes/index.html
+++ b/outcomes/index.html
@@ -1,6 +1,6 @@
 <h1> Program Outcome </h1>
 
-<h3> Looking back </h3>
+<h3> Preferred program </h3>
 <p class="half">
   <span class="big">
     70% of students would choose SE again if they could go back to high
@@ -11,8 +11,8 @@
   which makes it harder for CS students to meet others.
 </p>
 <div class="half second">
+  <span class="graph-title">Preferred program</span>
   <div id="choose-program"></div>
-  <span class="graph-title"></span>
 </div>
 
 <div class="vb"></div>
@@ -28,13 +28,22 @@
   for creating such a great environment for students!
 </p>
 <div class="half second">
+  <span class="graph-title">Program rating per gender</span>
   <div id="gender-rating"></div>
-  <span class="graph-title">Rating per gender</span>
 </div>
 
 <div class="vbx2"></div>
 
-<h3> Paths </h3>
+<h3> Customizing the experience </h3>
+<p class="full">
+There are many ways students can make the best of their time in university. As a
+software engineering student, it is normal for students to attend a few hackathons,
+build some side projects, intern as a software engineer in Silicon Valley.
+<br /><br />
+However, several students took the extra leap of faith to make the most of their
+university experience. Here are some of their stories:
+</p>
+<div class="vb"></div>
 <div class="half path-section">
   <div class="path-item">
     <span class="big path-title">Transitioning into design</span>
@@ -54,6 +63,7 @@ I’m grateful I took the leap that landed me my first product role because once
     </div>
   </div>
 
+  <div class="vbx2"></div>
   <div class="path-item">
     <span class="big path-title">Starting a tech club for non profits</span>
     <p>
@@ -71,9 +81,10 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
     </div>
   </div>
+  <div class="vbx2"></div>
 
   <div class="path-item">
-    <span class="big path-title">Starting a tech club for non profits</span>
+    <span class="big path-title">Exploring data science</span>
     <p>
       I saw data science as a way to grow my skill set in a way that differentiated me
       from other software engineers. I believe having an internship in data science has
@@ -115,6 +126,7 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
     </div>
   </div>
+
   <div class="vbx2"></div>
   <div class="path-item">
     <span class="big path-title">Stumbling into product management</span>
@@ -136,4 +148,25 @@ I’m grateful I took the leap that landed me my first product role because once
       </div>
     </div>
   </div>
+
+  <div class="vbx2"></div>
+  <div class="path-item">
+    <span class="big path-title">Balancing school and a startup</span>
+    <p>
+      At the end of my third year, Marcus and I had an opportunity to join an early-stage startup building autonomous semi trucks. In coordination with the SE Department, I was able to finish my degree remotely by submitting assignments online and flying back for exams. During this time, I got to be a part of Embark’s incredible journey as we grew from a small team of 5 engineers to one of the leading players in the self-driving space.
+      <br /><br />
+      Taking this unconventional path gave Marcus and I incredible experience beyond my schooling that will follow me throughout my career.
+    </p>
+    <div class="path-metadata">
+      <div class="path-photo">
+        <img class="duo" src="./img/paul.jpeg" />
+        <img class="duo" src="./img/marcus.jpeg" />
+      </div>
+      <div class="path-text">
+        <div class="path-name">Paul Ashbourne, Marcus Sjolin </div>
+        <div class="path-description">Head of Infrastructure,  Autonomous Truck Engineer at Embark Truck</div>
+      </div>
+    </div>
+  </div>
+
 </div>
